--- a/adivina-animal.html
+++ b/adivina-animal.html
@@ -11,7 +11,7 @@ body{
     margin:0;
     padding:20px;
     font-family:'Baloo 2', cursive;
-    background: linear-gradient(135deg,#9bf6ff,#ffc6ff);
+    background: linear-gradient(135deg,#a0e7e5,#ffaebc);
     text-align:center;
     overflow:hidden;
 }
@@ -38,7 +38,7 @@ h1{
 
 .izquierda img{
     width:220px;
-    background:white;
+    background:#fff;
     border-radius:25px;
     padding:15px;
     border:6px dashed #ff6f91;
@@ -51,7 +51,7 @@ h1{
 
 .derecha img{
     width:140px;
-    background:white;
+    background:#fff;
     border-radius:20px;
     padding:10px;
     cursor:pointer;
@@ -67,7 +67,7 @@ h1{
 #resultado{
     font-size:5em;
     height:80px;
-    margin-top:10px;
+    margin-top:15px;
 }
 
 #nombreAnimal{
@@ -102,16 +102,18 @@ canvas{
 <canvas id="canvas"></canvas>
 
 <script>
-// 🐶 ANIMALES (tus imágenes)
+// 🔊 Sonidos
+const sonidoBien = new Audio("https://cdn.pixabay.com/audio/2022/03/15/audio_9e5e1c0d1f.mp3");
+const sonidoMal = new Audio("https://cdn.pixabay.com/audio/2022/03/15/audio_3b0c1e6c91.mp3");
+
+// 🐶 Animales infantiles (imágenes tipo dibujo)
 const animales = [
- {nombre:"Cebra", img:"img/cebra.png"},
- {nombre:"Jirafa", img:"img/jirafa.png"},
- {nombre:"León", img:"img/leon.png"},
- {nombre:"Mono", img:"img/mono.png"},
- {nombre:"Cocodrilo", img:"img/cocodrilo.png"},
- {nombre:"Perro", img:"img/perro.png"},
- {nombre:"Gato", img:"img/gato.png"},
- {nombre:"Tigre", img:"img/tigre.png"}
+ {nombre:"Perro", img:"https://cdn-icons-png.flaticon.com/512/616/616408.png"},
+ {nombre:"Gato", img:"https://cdn-icons-png.flaticon.com/512/616/616430.png"},
+ {nombre:"León", img:"https://cdn-icons-png.flaticon.com/512/616/616412.png"},
+ {nombre:"Jirafa", img:"https://cdn-icons-png.flaticon.com/512/616/616415.png"},
+ {nombre:"Cebra", img:"https://cdn-icons-png.flaticon.com/512/616/616418.png"},
+ {nombre:"Cocodrilo", img:"https://cdn-icons-png.flaticon.com/512/616/616419.png"}
 ];
 
 let indice = 0;
@@ -128,6 +130,7 @@ const ctx = canvas.getContext("2d");
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
+// 🎮 Cargar juego
 function cargarJuego(){
     ctx.clearRect(0,0,canvas.width,canvas.height);
     resultado.textContent = "";
@@ -135,6 +138,7 @@ function cargarJuego(){
 
     const actual = animales[indice];
     animalObjetivo.src = actual.img;
+
     opcionesDiv.innerHTML = "";
 
     let opciones = [...animales]
@@ -152,8 +156,10 @@ function cargarJuego(){
     });
 }
 
+// ✅ Comprobar respuesta
 function comprobar(animal,img){
     if(animal.nombre === animales[indice].nombre){
+        sonidoBien.play();
         dibujarLinea(animalObjetivo,img,"green");
         resultado.textContent = "👍";
         nombreAnimal.textContent = "¡Es un " + animal.nombre + "!";
@@ -165,6 +171,7 @@ function comprobar(animal,img){
             cargarJuego();
         },1500);
     }else{
+        sonidoMal.play();
         dibujarLinea(animalObjetivo,img,"red");
         resultado.textContent = "❌";
         setTimeout(()=>{
@@ -174,6 +181,7 @@ function comprobar(animal,img){
     }
 }
 
+// 🟢 Dibujar línea
 function dibujarLinea(origen,destino,color){
     const r1 = origen.getBoundingClientRect();
     const r2 = destino.getBoundingClientRect();
@@ -186,6 +194,7 @@ function dibujarLinea(origen,destino,color){
     ctx.stroke();
 }
 
+// 🚀 Iniciar
 cargarJuego();
 </script>
 
